# dagster-dlt-dbt-poc

./: .env.example  .gitignore  README.md  pyproject.toml
dbt_project/: dbt_project.yml  profiles.yml
dbt_project/models/marts/: mart_user_repos_starred.sql  mart_user_repos_starred.yml
dbt_project/models/staging/: _sources.yml  stg_stargazers.sql  stg_stargazers.yml
dlt_sources/: github_stargazers.py
github_stars/: dbt_assets.py  definitions.py  dlt_definitions.py  resources.py
